# airavatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  __main__.py  agent-config.json  airavat-daemon.spec  build_release.py  mcp-config.json  pyproject.toml  start.sh
src/: agent.py  agent.py_patch.py  config.py  context.py  mcp_manager.py  server.py  storage.py
webui/: index.html
webui/assets/: index-1HL8OoQ5.css  index-CuUwU573.js  index-Q9qOeBry.js  index-ngzcm95f.css
