[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "airavat-daemon"
version = "0.1.0"
description = "Airavat Daemon — MCP Agent Server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic==0.49.0",
    "fastapi==0.115.11",
    "google-generativeai==0.8.4",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "mcp==1.3.0",
    "ollama==0.4.7",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "uvicorn==0.34.0",
]

[project.scripts]
airavat-daemon = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pyright]
include = ["src"]
executionEnvironments = [
    { root = "." }
]
